# Garlic

./: CMakeLists.txt  GarlicConfig.cmake  GarlicConfig.cmake.in  GarlicConfigVersion.cmake  README  README.md  cmake_install.cmake  exampleSteering.xml  example_steer.xml
doc/: ReleaseNotes.md
include/: ECALGarlic.hh  ECALGarlicAlgorithmParameters.hh  ECALGarlicAlgorithmParameters.hh_OLD  ECALGarlicCluster.hh  ECALGarlicClusterEnergyCorrector.hh  ECALGarlicClusterHelpers.hh  ECALGarlicClusterVarsGenericObject.hh  ECALGarlicConstants.hh  ECALGarlicEnergyEstimator.hh  ECALGarlicExtendedCluster.hh  ECALGarlicExtendedHit.hh  ECALGarlicExtendedObjects.hh  ECALGarlicExtendedTrack.hh  ECALGarlicGeometryHelpers.hh  ECALGarlicGeometryParameters.hh  ECALGarlicNeuralNetwork.hh  ECALPreClustering.hh  Estimator0_25_B_MLP.class.C  Estimator0_25_EC_1x1_MLP.class.C  Estimator0_25_EC_2x2_MLP.class.C  Estimator0_35_EC_10x10_MLP.class.C  Estimator0_35_EC_MLP.class.C  Estimator0_5_B_10x10_MLP.class.C  Estimator0_5_B_1x1_MLP.class.C  Estimator0_5_EC_1x1_MLP.class.C  Estimator0_5_EC_MLP.class.C  Estimator0_75_B_1x1_MLP.class.C  Estimator0_75_EC_10x10_MLP.class.C  Estimator0_75_EC_2x2_MLP.class.C  Estimator0_75_EC_MLP.class.C  Estimator10_B_2x2_MLP.class.C  Estimator10_EC_10x10_MLP.class.C  Estimator10_EC_2x2_MLP.class.C  Estimator1_25_B_10x10_MLP.class.C  Estimator1_25_B_1x1_MLP.class.C  Estimator1_25_B_MLP.class.C  Estimator1_25_EC_10x10_MLP.class.C  Estimator1_25_EC_1x1_MLP.class.C  Estimator1_25_EC_MLP.class.C  Estimator1_5_B_1x1_MLP.class.C  (+49 more)
include/weights/: MLP_Garlic_en02_05_notrkAllbck.h  MLP_Garlic_en02_05_trkPibck.h  MLP_Garlic_en05_1_notrkAllbck.h  MLP_Garlic_en05_1_trkPibck.h  MLP_Garlic_en0_02_notrkAllbck.h  MLP_Garlic_en0_02_trkPibck.h  MLP_Garlic_en10_100_notrkAllbck.h  MLP_Garlic_en10_100_trkPibck.h  MLP_Garlic_en1_3_notrkAllbck.h  MLP_Garlic_en1_3_trkPibck.h  MLP_Garlic_en3_10_notrkAllbck.h  MLP_Garlic_en3_10_trkPibck.h
src/: ClusterParametersDict.cc  ClusterParametersDict.h  ECALGarlic.cc  ECALGarlicCluster.cc  ECALGarlicClusterEnergyCorrector.cc  ECALGarlicClusterHelpers.cc  ECALGarlicEnergyEstimator.cc  ECALGarlicExtendedCluster.cc  ECALGarlicExtendedHit.cc  ECALGarlicExtendedTrack.cc  ECALGarlicGeometryHelpers.cc  ECALGarlicTrainer.cc  ECALPreClustering.cc  GNUmakefile  GarlicClusterAlgos.cc  GarlicClusterEnergyCorrector.cc  GarlicClusterPropertiesProcessor.cc  GarlicClusterSelector.cc  GarlicConversionFinder.cc  GarlicExtendedCluster.cc  GarlicExtendedHit.cc  GarlicExtendedTrack.cc  GarlicGeometryHelpers.cc  GarlicProcessor.cc  MCPhoton.cc  MCPhotonDict.cc  MCPhotonDict.h  MLP_Garlic_en02_05_notrkAllbck.cc  MLP_Garlic_en02_05_trkPibck.cc  MLP_Garlic_en05_1_notrkAllbck.cc  MLP_Garlic_en05_1_trkPibck.cc  MLP_Garlic_en0_02_notrkAllbck.cc  MLP_Garlic_en0_02_trkPibck.cc  MLP_Garlic_en10_100_notrkAllbck.cc  MLP_Garlic_en10_100_trkPibck.cc  MLP_Garlic_en1_3_notrkAllbck.cc  MLP_Garlic_en1_3_trkPibck.cc  MLP_Garlic_en3_10_notrkAllbck.cc  MLP_Garlic_en3_10_trkPibck.cc  photonPDFs.cc  (+1 more)
trainingMacro/: README  decideCuts.C  template.xml
trunk/: CMakeLists.txt  exampleSteering.xml
trunk/include/: ECALGarlic.hh  ECALGarlicAlgorithmParameters.hh  ECALGarlicExtendedTrack.hh  ECALGarlicTrainer.hh  ECALPreClustering.hh
trunk/src/: ECALGarlic.cc  ECALGarlicCluster.cc  ECALGarlicExtendedCluster.cc  ECALGarlicGeometryHelpers.cc  ECALGarlicNeuralNetwork.cc  MLP_Garlic_en0_02_notrkAllbck.cc
v2.0.3/: exampleSteering.xml
v2.0.3/include/: ClusterParameters.hh  ECALGarlic.hh  ECALGarlicAlgorithmParameters.hh  ECALGarlicCluster.hh  ECALGarlicConstants.hh  ECALGarlicExtendedObjects.hh  ECALGarlicGeometryHelpers.hh  ECALGarlicMLP.hh  Estimator0_25_B_10x10_MLP.class.C  (+51 more)
(+6 files in other folders)
